--- a/src/i18n/locales/az.json
+++ b/src/i18n/locales/az.json
@@ -73,7 +73,7 @@
     "services": "Xidmətlər",
     "electronicDocuments": "Elektron sənədlər",
     "eDocuments": "Elektron sənədlər",
-    "myProperties": "Mənim Mənzillərim",
+    "myProperties": "Mənzillərim",
     "buildingManagement": "idarə etmə",
     "permissions": "Hüquqlar",
     "profile": "Profil",
@@ -1978,7 +1978,7 @@
         "2": "Obyekt"
       }
     },
-    "myProperties": "Mənim Mənzillərim",
+    "myProperties": "Mənzillərim",
     "property": "mənzil",
     "loadError": "Məlumat yüklənərkən xəta baş verdi",
     "noProperties": "Mənzil tapılmadı",
@@ -2009,7 +2009,7 @@
       "welcome": "Xoş gəldiniz",
       "subtitle": "Sizin şəxsi paneliniz",
       "quickActions": "Tez Əməliyyatlar",
-      "myProperties": "Mənim Mənzillərim",
+      "myProperties": "Mənzillərim",
       "invoices": "Fakturalar",
       "unpaidInvoices": "Ödənilməmiş Fakturalar",
       "notifications": "Bildirişlər",
