--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -60,6 +60,8 @@
     "electronicDocuments": "Electronic Documents",
     "eDocuments": "Electronic Documents",
     "myProperties": "My Apartments",
+    "goTo": "Go to",
+    "notFound": "Property not found",
     "buildingManagement": "Building Management",
     "userRights": "Rights",
     "userPermissions": "Permissions",
