--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -60,6 +60,8 @@
     "electronicDocuments": "Электронные документы",
     "eDocuments": "Электронные документы",
     "myProperties": "Мои Квартиры",
+    "goTo": "Перейти",
+    "notFound": "Квартира не найдена",
     "buildingManagement": "Управление зданиями",
     "userRights": "Права пользователей",
     "profile": "Профиль"
