residetn property selection

--- a/src/i18n/locales/az.json
+++ b/src/i18n/locales/az.json
@@ -74,6 +74,7 @@
     "electronicDocuments": "Elektron sənədlər",
     "eDocuments": "Elektron sənədlər",
     "myProperties": "Mənzillərim",
+    "myProperty": "Mənzilim",
     "goTo": "Keçid et",
     "notFound": "Mənzil tapılmadı",
     "myServices": "Xidmətlərim",
