--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -60,6 +60,7 @@
     "electronicDocuments": "Electronic Documents",
     "eDocuments": "Electronic Documents",
     "myProperties": "My Apartments",
+    "myProperty": "My Apartment",
     "goTo": "Go to",
     "notFound": "Property not found",
     "buildingManagement": "Building Management",
