--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -60,6 +60,7 @@
     "electronicDocuments": "Электронные документы",
     "eDocuments": "Электронные документы",
     "myProperties": "Мои Квартиры",
+    "myProperty": "Моя Квартира",
     "goTo": "Перейти",
     "notFound": "Квартира не найдена",
     "buildingManagement": "Управление зданиями",
